# springerclient_ml4837

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/springerclient_ml4837/: __init__.py  springerclient_ml4837.py
tests/: test_springerclient_ml4837.py
