[tool.poetry]
name = "springerclient_ml4837"
version = "0.1.2"
# Update version to push to test pypi
description = "An API wrapper for the Springer Nature API, allowing users to query Springer’s database of scientific and academic documents."
authors = ["Mun Yee Elizabeth LEONG"]
license = "MIT"
readme = "README.md"
packages = [ {include = "springerclient_ml4837", from = "src"}, {include = "src"} ]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src/springerclient_ml4837",
]

# https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
# https://docs.pytest.org/en/latest/explanation/goodpractices.html